StrEditor v1.1.0 - Enhanced Features
New Features:
- Batch Processing (--batch)
- Diff Output (--diff)
- Statistics (--stats)
- Case Conversion (--case-upper, --case-lower, --case-title)
- Indent/Outdent (--indent, --outdent)
- Undo Support (--undo)
- Config File Support (--config)
- Multiple Operations (--multi-op)
- Conditional Replacements (--if-line-contains)

Tests: 48/48 passing (DUnitX)
Build: ZERO warnings, ZERO hints

--- a/StrEditor.dproj
+++ b/StrEditor.dproj
@@ -214,6 +214,14 @@
         <DCCReference Include="StrEditor.CommandLine.pas"/>
         <DCCReference Include="StrEditor.Regex.pas"/>
         <DCCReference Include="StrEditor.Macros.pas"/>
+        <DCCReference Include="StrEditor.Batch.pas"/>
+        <DCCReference Include="StrEditor.Diff.pas"/>
+        <DCCReference Include="StrEditor.CaseConversion.pas"/>
+        <DCCReference Include="StrEditor.Indent.pas"/>
+        <DCCReference Include="StrEditor.Undo.pas"/>
+        <DCCReference Include="StrEditor.Config.pas"/>
+        <DCCReference Include="StrEditor.Conditional.pas"/>
+        <DCCReference Include="TextDiff.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
